export class Person {
  id: string;
  name: string;
  colors: {
    hairColor: string;
    skinColor: string;
  };
  position: [number, number, number];
  rotation: [number, number, number, string];
}
